<resources>
    <string name="app_name">Sikatuna Parish</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events">Events</string>
    <string name="groups">Groups</string>
    <string name="add_event">Add Event</string>
    <string name="nine">9</string>
    <string name="nov">Nov</string>
    <string name="confirm">Confirm</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="all">All</string>
    <string name="name">Name</string>
    <string name="confirmed">Confirmed</string>
    <string name="create_event">Create Event</string>
    <string name="clear">Clear</string>
    <string name="event_name">Event Name</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="group_name">Group Name</string>
    <string name="group_leader_name">Group Leader Name</string>
    <string name="group_contact_number">Group Contact Number</string>
    <string name="create_group">Create Group</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="alarm">Alarm</string>
    <string name="search_title">Find Event</string>
    <string name="search_hint">Type Event Title</string>
    <string name="filename">Filename</string>
    <string name="save_to_docs">Save</string>
    <string name="update_event">Update Event</string>
</resources>
