<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingBottom="?attr/actionBarSize"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/confirm_rb"
                android:text="@string/confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/pending_rb"
                android:text="@string/pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rejected_rb"
                android:text="@string/rejected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/all_rb"
                android:text="@string/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:name="com.tanginan.www.sikatuna_parish.EventListFragment"
            android:layout_marginLeft="16dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            app:layoutManager="LinearLayoutManager"
            tools:context=".EventListFragment"
            tools:listitem="@layout/fragment_eventlist"/>
    </LinearLayout>




</android.support.constraint.ConstraintLayout>






