<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <ProgressBar
        android:id="@+id/update_progress"
        android:layout_gravity="center"
        android:padding="10dp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

<LinearLayout
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">



    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_month"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/nov"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/date_day"
            android:layout_width="match_parent"
            android:text="@string/nine"
            android:textSize="50dp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem" />

    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_weight=".6"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/event_name"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?attr/textAppearanceListItem" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="Start:"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_weight=".4"
                android:text="time start"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="End:"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem" />


                <TextView
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_weight=".4"
                android:text="time end"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="details"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="Status:"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:text="status"
                android:textColor="@android:color/holo_red_dark"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
       android:id="@+id/action_layout"
        android:layout_weight=".87"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save_btn"
            android:text="Save"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
        android:id="@+id/confirm_btn"
        android:text="Confirm"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/reject_btn"
            android:text="Reject"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/edit_btn"
            android:text="Edit"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
        android:id="@+id/delete_btn"
        android:text="Delete"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




    </LinearLayout>


</LinearLayout>

</android.support.v7.widget.CardView>
